--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -365,6 +365,22 @@
             width: 135px;
         }
 
+        .cube-shown-selector {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .cube-shown-selector label {
+            color: white;
+            width: 3.8rem;
+            font-size: 0.8rem;
+        }
+
+        .cube-shown-selector select {
+            width: 135px;
+        }
+
         .score-inputs input::-webkit-outer-spin-button,
         .score-inputs input::-webkit-inner-spin-button {
             -webkit-appearance: none;
