--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -823,10 +823,10 @@
                 <select id="turn-select" class="selector-size"></select>
             </div>
             <div class="cube-shown-selector">
-                <label for="cube-shown-select">Показан куб</label>
+                <label for="cube-shown-select">Показан куб?</label>
                 <select id="cube-shown-select" class="selector-size">
-                    <option value="да">да</option>
-                    <option value="нет">нет</option>
+                    <option value="0">Нет</option>
+                    <option value="1">Да</option>
                 </select>
             </div>
             <div class="action-buttons">
