--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1432,7 +1432,7 @@
         const cubeShown = document.getElementById('cube-shown-select').value;
         const cubeOwnerSelector = document.querySelector('.cube-owner-selector');
         const diceSelector = document.querySelector('.dice-selector');
-        if (cubeShown === 'да') {
+        if (cubeShown === '1') {
             cubeOwnerSelector.style.display = 'none';
             diceSelector.style.display = 'none';
         } else {
