--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1215,7 +1215,7 @@
             if (img) {
                 let cubeX = 375;
                 let cubeY = 350;
-                if (cubeShown === '1') {
+                if (cubeShown === '1' && cubeValue !== 0) {
                     if (turn === 'white') {
                         cubeX = 575;
                     } else if (turn === 'black') {
