--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1504,13 +1504,14 @@
         xgid += exponent.toString();
         xgid += ':'
         const cubeOwner = document.getElementById('cube-owner-select').value;
+        const cubeShown = parseInt(document.getElementById('cube-shown-select').value);
         let cubePosition = 0;
-        if (cubeValue === 0) {
-            cubePosition = 0;
-        } else if (cubeOwner === 'white') {
-            cubePosition = 1;
-        } else if (cubeOwner === 'black') {
-            cubePosition = -1;
+        if (cubeValue !== 0 && cubeShown !== 0) {
+            if (cubeOwner === 'white') {
+                cubePosition = 1;
+            } else if (cubeOwner === 'black') {
+                cubePosition = -1;
+            }
         }
         xgid += ':'
         xgid += cubePosition.toString();
