--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1515,6 +1515,7 @@
         }
         xgid += ':'
         xgid += cubePosition.toString();
+        xgid += ':'
         const turn = document.getElementById('turn-select').value;
         let turnValue = 0;
         if (turn === 'white') {
