--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -825,7 +825,7 @@
             <div class="cube-shown-selector">
                 <label for="cube-shown-select">Показан куб?</label>
                 <select id="cube-shown-select" class="selector-size">
-                    <option value="0">Нет</option>
+                    <option value="0">0</option>
                     <option value="2">2</option>
                     <option value="4">4</option>
                     <option value="8">8</option>
