--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -107,7 +107,7 @@
 
         .nickname_inputs {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             align-items: stretch;
             width: 50%;
         }
