--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -129,7 +129,7 @@
         }
 
         .nickname_inputs input {
-            flex: 1;
+            width: 5rem;
             padding: 0.3125rem;
             font-size: 0.8rem;
             text-align: center;
