--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -204,6 +204,25 @@
             text-align: center;
         }
 
+        #game-type-button {
+            font-family: Arial, sans-serif;
+            font-size: 0.96rem;
+            color: white;
+            width: 6rem;
+            height: 3rem;
+            background-color: #808080;
+            border: 1px solid #666;
+            border-radius: 0.25rem;
+            padding: 0.125rem;
+            cursor: pointer;
+            text-align: center;
+            transition: background-color 0.3s;
+        }
+
+        #game-type-button:hover {
+            background-color: #666;
+        }
+
         .checker-selector {
             display: flex;
             flex-direction: column;
