--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -210,9 +210,10 @@
             color: white;
             width: 6rem;
             height: 3rem;
-            background-color: #808080;
-            border: 1px solid #666;
-            border-radius: 0.25rem;
+            background-color: #bdbdbd;
+            border: 1px solid #6d6d6d;
+            border-radius: 0.5rem;
+            border-style: double;
             padding: 0.125rem;
             cursor: pointer;
             text-align: center;
