--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -210,7 +210,7 @@
             color: white;
             width: 6rem;
             height: 3rem;
-            background-color: #bdbdbd;
+            background-color: #aaaaaa;
             border: 1px solid #6d6d6d;
             border-radius: 0.5rem;
             border-style: double;
