--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -210,10 +210,8 @@
             color: white;
             width: 6rem;
             height: 2.5rem;
-            background-color: #aaaaaa;
-            border: 1px solid #6d6d6d;
-            border-radius: 0.5rem;
-            border-style: double;
+            background-color: #818181;
+            border: 0.5rem double #4d4d4d;
             padding: 0.125rem;
             cursor: pointer;
             text-align: center;
