--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Backgammon Board Editor</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -850,9 +851,9 @@
                 </select>
             </div>
             <div class="action-buttons">
-                <button id="clear-button">Очистить</button>
-                <button id="init-button">Начальная позиция</button>
-                <button id="show-button">Показать</button>
+                <button id="clear-button"><i class="fas fa-trash-alt"></i></button>
+                <button id="init-button"><i class="fas fa-home"></i></button>
+                <button id="show-button"><i class="fas fa-eye"></i></button>
             </div>
         </div>
         <div class="right-panel2">
