--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -628,7 +628,7 @@
 
         .action-buttons {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             gap: 1rem;
             justify-content: left;
         }
@@ -639,7 +639,6 @@
             border-radius: 0.3rem;
             margin: 0;
             flex-shrink: 0;
-            width: 100%;
         }
     </style>
 </head>
