--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1553,11 +1553,8 @@
         const xgid = generateXGID();
 
 
-        if (xgid.length !== 26) {
-            alert(`Ошибка: XGID строка должна содержать 26 символов, а содержит ${xgid.length}\nXGID: ${xgid}`);
-        } else {
-            alert(`XGID: ${xgid}\n\nДлина строки: ${xgid.length} символов (корректно)`);
-        }
+
+    alert(`XGID: ${xgid}`);
     });
 
     // Clear button logic
