--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1226,6 +1226,8 @@
         const cubeValue = parseInt(document.getElementById('cube-value-select').value);
         const cubeOwner = document.getElementById('cube-owner-select').value;
         const cubeShown = parseInt(document.getElementById('cube-shown-select').value);
+        const dice1 = parseInt(document.getElementById('dice1-select').value);
+        const dice2 = parseInt(document.getElementById('dice2-select').value);
 
         if (cubeValue >= 0) {
             let img;
@@ -1543,12 +1545,14 @@
         xgid += turnValue.toString();
         xgid += ':'
         let cubePart = '';
-        if (cubeShown !== 0) {
-            cubePart = 'D';
-        } else if (cubeValue !== 0) {
-            cubePart = cubeValue.toString() + cubeShown.toString();
-        } else {
+        if (cubeValue === 0 && dice1 === 0 && dice2 === 0) {
             cubePart = '00';
+        } else if (cubeShown !== 0) {
+            cubePart = 'D';
+        } else if (dice1 !== 0 || dice2 !== 0) {
+            cubePart = dice1.toString() + dice2.toString();
+        } else {
+            cubePart = cubeValue.toString() + '0';
         }
         xgid += cubePart;
         return xgid;
