--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1545,6 +1545,8 @@
         xgid += turnValue.toString();
         xgid += ':'
         let cubePart = '';
+        const dice1 = parseInt(document.getElementById('dice1-select').value);
+        const dice2 = parseInt(document.getElementById('dice2-select').value);
         if (cubeValue === 0 && dice1 === 0 && dice2 === 0) {
             cubePart = '00';
         } else if (cubeShown !== 0) {
