--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -643,13 +643,13 @@
                     <div class="bar-label">На баре:</div>
                     <div class="selectors">
                         <div>
-                            <label for="white-bar-select">Белый:</label>
+                            <label for="white-bar-select">Белых:</label>
                             <select id="white-bar-select" class="selector-size">
                                 <option value="0">0</option>
                             </select>
                         </div>
                         <div>
-                            <label for="black-bar-select">Черный:</label>
+                            <label for="black-bar-select">Черных:</label>
                             <select id="black-bar-select" class="selector-size">
                                 <option value="0">0</option>
                             </select>
