--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1486,6 +1486,7 @@
         xgid += exponent.toString();
         xgid += ':'
         const cubeOwner = document.getElementById('cube-owner-select').value;
+        const cubeShown = parseInt(document.getElementById('cube-shown-select').value);
         let cubePosition = 0;
         if (cubeValue !== 0) {
             if (cubeOwner === 'white') {
