--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -664,7 +664,7 @@
         th,
         td {
             border: 1px solid #555;
-            padding: 20px 30px;
+            padding: 2rem 3rem;
             text-align: left;
             color: white;
             word-spacing: 16px;
